fix page overflow right on mobile display

--- a/assets/index.css
+++ b/assets/index.css
@@ -549,7 +549,7 @@ hr{
     body{
         max-width: 100vw;
         width: auto;
-        overflow-x:visible;
+        overflow-x:hidden;
         white-space:nowrap;
     }
     .header-text{
